syntax = "proto3";

package flow.sdk.entities;

option go_package = "entities";

import "google/protobuf/timestamp.proto";

message BlockHeader {
  bytes hash = 1;
  bytes previousBlockHash = 2;
  uint64 number = 3;
}

message AccountSignature {
  bytes account = 1;
  bytes signature = 2;
}

enum TransactionStatus {
  STATUS_UNKNOWN = 0;
  STATUS_PENDING = 1;
  STATUS_FINALIZED = 2;
  STATUS_REVERTED = 3;
  STATUS_SEALED = 4;
}

message Transaction {
  bytes script = 1;
  bytes reference_block_hash = 2;
  uint64 nonce = 3;
  uint64 compute_limit = 4;
  bytes PayerAccount = 5;
  repeated bytes ScriptAccounts = 6;
  repeated AccountSignature signatures = 7;
  TransactionStatus status = 8;
}

message Account {
  bytes address = 1;
  uint64 balance = 2;
  bytes code = 3;
  repeated AccountPublicKey keys = 4;
}

message AccountPublicKey {
  bytes public_key = 1;
  uint32 sign_algo = 2;
  uint32 hash_algo = 3;
  uint32 weight = 4;
}

message Event {
  string type = 1;
  bytes transaction_hash = 2;
  uint32 index = 3;
  bytes payload = 4;
}
